# haar

./: .gitignore  .gitmodules  CMakeLists.txt  README  index.html
app/: haar.c  hw.c  ihaar.c  zorder.c
doc/: Doxyfile.in
matlab/: README  haar.m  haar1d.m  ihaar.m  ihaar1d.m  zorder2d.m
src/: haar-mylib.c  haar-mylib.h  haar.c  haar.h  util-mylib.c  util-mylib.h  z.c  z.h
src/internal/: ops.h
test/: CMakeLists.txt  haar.cpp  helpers.h  ops.cpp  z.cpp
